--- a/index.html
+++ b/index.html
@@ -49,34 +49,28 @@
       <h1>Repository</h1>
       <div class="row">
         <div class="col-3">
-          <div class="repo">
-            <div class="repo-img">
-              <img src="./assets/repo/nextjs-logo.png" alt="github" />
+          <a href="https://github.com/A2RJ/SimpadeNextJs" target="_blank">
+            <div class="repo">
+              <div class="repo-img">
+                <img src="./assets/repo/nextjs-logo.png" alt="github" />
+              </div>
+              <div class="repo-text">
+                <p>Repository detail</p>
+              </div>
             </div>
-            <div class="repo-text">
-              <h2>Nextjs</h2>
-              <p>
-                <a href="https://github.com/A2RJ/SimpadeNextJs" target="_blank">
-                  Repository</a
-                >
-              </p>
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-3">
-          <div class="repo">
-            <div class="repo-img">
-              <img src="./assets/repo/nuxtjs-logo.png" alt="github" />
-            </div>
-            <div class="repo-text">
-              <h2>Nuxtjs</h2>
-              <p>
-                <a href="https://github.com/A2RJ/APERKATNuxtjs" target="_blank">
-                  Repository</a
-                >
-              </p>
-            </div>
-          </div>
+          <a href="https://github.com/A2RJ/APERKATNuxtjs" target="_blank">
+            <div class="repo">
+              <div class="repo-img">
+                <img src="./assets/repo/nuxtjs-logo.png" alt="github" />
+              </div>
+              <div class="repo-text">
+                <p>Repository detail</p>
+              </div>
+            </div></a
+          >
         </div>
         <div class="col-3">
           <div class="repo">
@@ -116,13 +110,17 @@
         </div>
       </div>
     </div>
-    
+
     <div id="contact">
       <h1>Contact</h1>
       <div>
         <form action="#" method="post">
-          <input type="email" name="email" id="email" />
-          <button type="submit" class="btn">Kirim</button>
+          <input
+          type="email"
+          name="email"
+          id="email"
+          />
+          <button type="submit" class="btn">Subscribe</button>
         </form>
       </div>
     </div>
