Fix done responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="./assets/repo/nextjs-logo.png" alt="github" />
               </div>
               <div class="repo-text">
-                <p>Repository detail</p>
+                <p>Detail</p>
               </div>
             </div>
           </a>
@@ -67,46 +67,40 @@
                 <img src="./assets/repo/nuxtjs-logo.png" alt="github" />
               </div>
               <div class="repo-text">
-                <p>Repository detail</p>
+                <p>Detail</p>
               </div>
             </div></a
           >
         </div>
         <div class="col-3">
-          <div class="repo">
-            <div class="repo-img">
-              <img src="./assets/repo/laravel-seeklogo.com.svg" alt="github" />
+          <a href="https://github.com/A2RJ/SimpadeLaravel9" target="_blank">
+            <div class="repo">
+              <div class="repo-img">
+                <img
+                  src="./assets/repo/laravel-seeklogo.com.svg"
+                  alt="github"
+                />
+              </div>
+              <div class="repo-text">
+                <p>Detail</p>
+              </div>
             </div>
-            <div class="repo-text">
-              <h2>Laravel</h2>
-              <p>
-                <a
-                  href="https://github.com/A2RJ/SimpadeLaravel9"
-                  target="_blank"
-                >
-                  Repository</a
-                >
-              </p>
-            </div>
-          </div>
+          </a>
         </div>
         <div class="col-3">
-          <div class="repo">
-            <div class="repo-img">
-              <img
-                src="./assets/repo/lumen-1-logo-svg-vector.svg"
-                alt="github"
-              />
+          <a href="https://github.com/A2RJ/APERKATLumen" target="_blank">
+            <div class="repo">
+              <div class="repo-img">
+                <img
+                  src="./assets/repo/lumen-1-logo-svg-vector.svg"
+                  alt="github"
+                />
+              </div>
+              <div class="repo-text">
+                <p>Detail</p>
+              </div>
             </div>
-            <div class="repo-text">
-              <h2>Lumen</h2>
-              <p>
-                <a href="https://github.com/A2RJ/APERKATLumen" target="_blank">
-                  Repository</a
-                >
-              </p>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
@@ -115,11 +109,7 @@
       <h1>Contact</h1>
       <div>
         <form action="#" method="post">
-          <input
-          type="email"
-          name="email"
-          id="email"
-          />
+          <input type="email" name="email" id="email" />
           <button type="submit" class="btn">Subscribe</button>
         </form>
       </div>
